<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_30"
        android:title="@string/title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/blogFragment"
        android:icon="@drawable/ic_blog_30"
        android:title="@string/title_dashboard"
        app:showAsAction="always" />

    <item
        android:id="@+id/diaryFragment"
        android:icon="@drawable/ic_diary_30"
        android:title="@string/title_notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_30"
        android:title="@string/title_notifications"
        app:showAsAction="always" />

</menu>