<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".search.presentation.SearchFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/frg_search__toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/frg_search__toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Поиск" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/frg_search__mc_search"
        android:layout_width="@dimen/auth_et_width"
        android:layout_height="@dimen/auth_et_height"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/auth_mc_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frg_search__toolbar"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/frg_search__et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="Поиск"
            android:paddingHorizontal="@dimen/auth_et_padding_horizontal"
            android:textColor="@color/black"
            android:textColorHint="@color/text_secondary" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frg_search__rv_search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frg_search__mc_search"
        tools:itemCount="3"
        tools:listitem="@layout/item_search" />

</androidx.constraintlayout.widget.ConstraintLayout>